--- a/src/Avalonia.Stories/Avalonia.Stories.csproj
+++ b/src/Avalonia.Stories/Avalonia.Stories.csproj
@@ -3,11 +3,15 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
         <Nullable>enable</Nullable>
-        <PackageVersion>0.0.1</PackageVersion>
+        <PackageVersion>0.0.2</PackageVersion>
         <Title>Stories control for Avalonia UI</Title>
         <Authors>V.Zolotov</Authors>
         <Copyright>V.Zolotov</Copyright>
         <PackageTags>Avalonia, Stories</PackageTags>
+        <PackageId>Pwa.Stories</PackageId>
+        <PackageProjectUrl>https://github.com/vzolotov/Avalonia.Stories</PackageProjectUrl>
+        <PackageLicenseUrl>https://github.com/vzolotov/Avalonia.Stories/blob/main/LICENSE</PackageLicenseUrl>
+        <RepositoryUrl>https://github.com/vzolotov/Avalonia.Stories</RepositoryUrl>
     </PropertyGroup>
 
     <ItemGroup>
