--- a/src/Avalonia.Stories/Avalonia.Stories.csproj
+++ b/src/Avalonia.Stories/Avalonia.Stories.csproj
@@ -15,10 +15,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="AsyncImageLoader.Avalonia" Version="2.2.0" />
-        <PackageReference Include="Avalonia" Version="0.10.999-cibuild0019213-beta" />
-        <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.999-cibuild0019213-beta" />
-        <PackageReference Include="ReactiveUI" Version="13.2.10" />
-        <PackageReference Include="ReactiveUI.Fody" Version="13.2.10" />
+        <PackageReference Include="AsyncImageLoader.Avalonia" Version="3.0.0-avalonia11-preview3" />
+        <PackageReference Include="Avalonia" Version="11.0.999-cibuild0031838-beta" />
+        <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.999-cibuild0031838-beta" />
+        <PackageReference Include="ReactiveUI" Version="18.4.25" />
+        <PackageReference Include="ReactiveUI.Fody" Version="18.4.25" />
     </ItemGroup>
 </Project>
