remove Directory.Build.props

--- a/src/Avalonia.Stories/Avalonia.Stories.csproj
+++ b/src/Avalonia.Stories/Avalonia.Stories.csproj
@@ -16,9 +16,9 @@
 
     <ItemGroup>
         <PackageReference Include="AsyncImageLoader.Avalonia" Version="3.0.0-avalonia11-preview3" />
-        <PackageReference Include="Avalonia" Version="11.0.999-cibuild0031838-beta" />
-        <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.999-cibuild0031838-beta" />
-        <PackageReference Include="ReactiveUI" Version="18.4.25" />
+        <PackageReference Include="Avalonia" Version="11.0.0-preview5" />
+        <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.0-preview5" />
+        <PackageReference Include="ReactiveUI" Version="" />
         <PackageReference Include="ReactiveUI.Fody" Version="18.4.25" />
     </ItemGroup>
 </Project>
