--- a/src/Avalonia.Stories.Demo/Avalonia.Stories.Demo.csproj
+++ b/src/Avalonia.Stories.Demo/Avalonia.Stories.Demo.csproj
@@ -18,11 +18,11 @@
         <TrimmableAssembly Include="Avalonia.Themes.Default" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="Avalonia" Version="11.0.999-cibuild0031838-beta" />
-        <PackageReference Include="Avalonia.Desktop" Version="11.0.999-cibuild0031838-beta" />
+        <PackageReference Include="Avalonia" Version="11.0.0-preview5" />
+        <PackageReference Include="Avalonia.Desktop" Version="11.0.0-preview5" />
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
-        <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.999-cibuild0031838-beta" />
-        <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.999-cibuild0031838-beta" />
+        <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.0-preview5" />
+        <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.0-preview5" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\Avalonia.Stories\Avalonia.Stories.csproj" />
