--- a/src/Avalonia.Stories/Avalonia.Stories.csproj
+++ b/src/Avalonia.Stories/Avalonia.Stories.csproj
@@ -4,26 +4,28 @@
         <TargetFramework>netstandard2.1</TargetFramework>
         <Nullable>enable</Nullable>
         <PackageVersion>0.0.3</PackageVersion>
-        <Title>Stories control for Avalonia UI</Title>
+        <Title>Stories control for AvaloniaUI</Title>
         <Authors>V.Zolotov</Authors>
         <Copyright>V.Zolotov</Copyright>
         <PackageTags>Avalonia, Stories</PackageTags>
         <PackageId>Pwa.Stories</PackageId>
         <PackageProjectUrl>https://github.com/vzolotov/Avalonia.Stories</PackageProjectUrl>
-        <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <RepositoryUrl>https://github.com/vzolotov/Avalonia.Stories</RepositoryUrl>
         <PackageReadmeFile>README.md</PackageReadmeFile>
+        <PackageLicenseFile>LICENSE</PackageLicenseFile>
+        <Description>is similar like Instagram Stories</Description>
     </PropertyGroup>
 
     <ItemGroup>
         <None Include="..\..\README.md" Pack="true" PackagePath="\"/>
+        <None Include="..\..\.github\workflows\release.yml" Pack="false" PackagePath="\"/>
+        <None Include="..\..\LICENSE" Pack="true" PackagePath="\" />
     </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="AsyncImageLoader.Avalonia" Version="3.0.0-avalonia11-preview3" />
         <PackageReference Include="Avalonia" Version="11.0.0-preview5" />
         <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.0-preview5" />
-        <PackageReference Include="ReactiveUI" Version="" />
         <PackageReference Include="ReactiveUI.Fody" Version="18.4.25" />
     </ItemGroup>
 </Project>
